--- a/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
+++ b/EMART-UI/src/app/Seller/sellerlandingpage/sellerlandingpage.component.html
@@ -7,7 +7,7 @@
     #s{
   background-image: url("assets/images/sp.jpg");
   background-size:full;
-  height:1000px;
+  height:auto;
 }
     
     .div1 a {
